# superimpose-mesh-lib

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  index.html
applications/: SIM_Background_Apps.xml  SIM_Gazebo_Background_Apps.xml  SIM_Gazebo_superimpose-hand.xml  SIM_movefinger.xml  SIM_superimpose-hand.xml  movefinger.xml  superimpose-hand-dump.xml.template  superimpose-hand.xml.template
cmake/: CMakeRC.cmake  Findglew.cmake  Findglm.cmake  LICENSE.md  SuperimposeConfig.cmake.in
config/: SIM_Gazebo_movefinger_config.ini  SIM_Gazebo_superimpose-hand_config.ini  SIM_movefinger_config.ini  SIM_superimpose-hand_config.ini  movefinger_config.ini  superimpose-hand_config.ini
deprecated/: SuperimposeiCubHand.h
doc/: CMakeLists.txt  Doxyfile.in  main.dox  mainpage.md  tutorial_superimpose.md  tutorial_superimpose_background.md
doc/doxygen/: Doxyfile
doc/doxygen/html/: Mesh_8cpp.html  Mesh_8cpp__incl.map  Mesh_8cpp__incl.md5  Mesh_8cpp_source.html  Mesh_8h.html  Mesh_8h__dep__incl.map  Mesh_8h__dep__incl.md5  Mesh_8h__incl.map  Mesh_8h__incl.md5  Mesh_8h_source.html  Model_8cpp.html  Model_8cpp__incl.map  Model_8cpp__incl.md5  Model_8cpp_source.html  Model_8h.html  Model_8h__dep__incl.map  Model_8h__dep__incl.md5  Model_8h__incl.map  Model_8h__incl.md5  Model_8h_source.html  SICAD_8cpp.html  SICAD_8cpp__incl.map  SICAD_8cpp__incl.md5  SICAD_8cpp_source.html  SICAD_8h.html  SICAD_8h__dep__incl.map  SICAD_8h__dep__incl.md5  SICAD_8h__incl.map  SICAD_8h__incl.md5  SICAD_8h_source.html  SISkeleton_8cpp.html  SISkeleton_8cpp__incl.map  SISkeleton_8cpp__incl.md5  SISkeleton_8cpp_source.html  SISkeleton_8h.html  SISkeleton_8h__dep__incl.map  SISkeleton_8h__dep__incl.md5  SISkeleton_8h__incl.map  SISkeleton_8h__incl.md5  SISkeleton_8h_source.html  (+124 more)
doc/doxygen/html/search/: all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  (+15 more)
doc/doxygen/latex/: Mesh_8cpp.tex  Mesh_8cpp__incl.md5  Mesh_8h.tex  Mesh_8h__dep__incl.md5  Mesh_8h__incl.md5  Model_8cpp.tex  Model_8cpp__incl.md5  Model_8h.tex  Model_8h__dep__incl.md5  Model_8h__incl.md5  SICAD_8cpp.tex  SICAD_8cpp__incl.md5  SICAD_8h.tex  SICAD_8h__dep__incl.md5  SICAD_8h__incl.md5  SISkeleton_8cpp.tex  SISkeleton_8cpp__incl.md5  SISkeleton_8h.tex  SISkeleton_8h__dep__incl.md5  SISkeleton_8h__incl.md5  Shader_8cpp.tex  Shader_8cpp__incl.md5  Shader_8h.tex  Shader_8h__dep__incl.md5  Shader_8h__incl.md5  Superimpose_8h.tex  Superimpose_8h__dep__incl.md5  Superimpose_8h__incl.md5  annotated.tex  classMesh.tex  classMesh_a143c8d7c179801c6377853db26d4a19f_cgraph.md5  classModel.tex  classModel_a23b167ce0d33f7e6ab5693cd5e81a9a5_cgraph.md5  classModel_a3cd88224a93dc81a8503d42be807eb86_cgraph.md5  classModel_a95ae1a9980ded3d98b1c8785cb889d96_cgraph.md5  classModel_a97ced90b9b512521b2e5bdeaeac6b907_cgraph.md5  classModel_aa7d0215f3ee74bef71ddeef173dd36dd_cgraph.md5  classSICAD.tex  classSICAD__inherit__graph.md5  classSICAD_a0e42acab32252ddc878794f365ee1037_cgraph.md5  (+33 more)
doc/tutorial_code/: shader_frame.frag  shader_model.frag  tutorial_background.cpp  tutorial_superimpose.cpp  tutorial_superimpose_customshader.cpp
include/: CADSuperimposer.h  Mesh.h  Model.h  SHCAD.h  SHSkeleton.h  SICAD.h  SISkeleton.h  Shader.h  SiCHCAD.h  SiCHSkeleton.h  SkeletonSuperimposer.h  SuperImpose.h  SuperimposeHand.h  SuperimposeHandCADThread.h  SuperimposeHandSkeletonThread.h  SuperimposeHandThread.h  SuperimposeiCubHand.h  SuperimposerFactory.h  ThreadControllerSHC.h  shader.h
scripts/: SIM_Background_Apps.xml  SIM_Gazebo_Background_Apps.xml  SIM_Gazebo_movefinger.xml  SIM_Gazebo_superimpose-hand.xml  (+4 more)
src/SuperImpose/: CMakeLists.txt
src/SuperImpose/include/SuperImpose/: Mesh.h  Model.h  SICAD.h  SISkeleton.h  Shader.h  SuperImpose.h
src/SuperImpose/src/: Mesh.cpp  Model.cpp  SICAD.cpp  SISkeleton.cpp  Shader.cpp
src/SuperimposeMesh/: CMakeLists.txt
src/SuperimposeMesh/include/SuperimposeMesh/: Mesh.h  Model.h  SICAD.h  SISkeleton.h  Shader.h  Superimpose.h
src/SuperimposeMesh/shader/: shader_background.vert  shader_frame.vert  shader_model.frag  shader_model.vert
src/SuperimposeMesh/src/: Mesh.cpp  Model.cpp  SICAD.cpp  SISkeleton.cpp  Shader.cpp
src/iCubLimbSuperimposer/: CMakeLists.txt
src/iCubLimbSuperimposer/app/: SIM_Background_Apps.xml  superimpose-hand.xml.template
src/iCubLimbSuperimposer/config/: SIM_superimpose-hand_config.ini
src/iCubLimbSuperimposer/include/iCubLimbSuperimposer/: CADSuperimposer.h  SkeletonSuperimposer.h  SuperimposerFactory.h  ThreadControllerSHC.h
src/iCubLimbSuperimposer/src/: CADSuperimposer.cpp  SkeletonSuperimposer.cpp  SuperimposerFactory.cpp  ThreadControllerSHC.cpp  main.cpp
test/: CMakeLists.txt
test/common/: Space_Invader_Textured.mtl  shader_frame.frag  shader_model_texture.frag  utils.h
test/misc/mesh/: spaceinvader_textured.mtl
test/test_hdpi/: CMakeLists.txt  main.cpp
test/test_initialization_control/: CMakeLists.txt  main.cpp
test/test_moving_object/: CMakeLists.txt  main.cpp
test/test_multiple_windows_moving_object/: CMakeLists.txt  main.cpp
test/test_public_interface/: CMakeLists.txt  main.cpp
test/test_scissors/: CMakeLists.txt  main.cpp
test/test_scissors_background/: CMakeLists.txt  main.cpp
test/test_scissors_moving_objects/: CMakeLists.txt  main.cpp
test/test_sicad/: CMakeLists.txt  main.cpp
test/test_sicad_frame/: CMakeLists.txt  main.cpp
test/test_sicad_model/: CMakeLists.txt  main.cpp
test/test_sicad_model_frame/: CMakeLists.txt  main.cpp
test/test_sicad_shader_path/: CMakeLists.txt  main.cpp
test/test_thread_contexts/: CMakeLists.txt  main.cpp
(+34 files in other folders)
